www/css/index.css
/************* generalité ***************/
body {
 background-color: #212529;
}

body.modal-open {
 	 overflow: hidden;
  position: fixed;
  width: 100%;
  height: 100%;
}

nav img {
  margin-top: 3px; 
}
a.btn {
  width: 100%; 
}
.margin {
  margin: 25px 15px !important; 
}
button{
    margin-top:10px!important;
}
.modal-content a {
    font-weight:bold;
}



/************* view changement date ***************/
.dateChoice .container{
      min-height: 60px!important;
}

#blockChangeView{
     
    float:left;
    margin-top:0.3em;
    height:50px;
    font-size: 11px;
    
}

#blockChangeMonth{
    
    float:right;
    margin-right:0.2em; 
    height:35px;
}

#libelleMois{
    
    display:inline;
    font-size:14px;
}

#blockLeft{ 
    
    display: inline;
    padding-top:0.4em;
    padding-bottom:0.4em;
    padding-right:1em;
    padding-left:1em;
    border: 1px solid #D3D3D3; 
    background-color: #F2F2F2;
    border-right: 0px solid #EBEBEB;  
	font-size: 14px;
}


#blockRight{  
	
    display: inline;
    padding-top:0.4em;
    padding-bottom:0.4em;
    padding-right:1em;
    padding-left:1em;
    border: 1px solid #D3D3D3;
    background-color:#F2F2F2;   
	font-size: 14px;
}

#blockRightFleche{  
    
    display: inline;
    padding-top:0.19em;
    padding-bottom:0.3em;
    padding-right:1em;
    padding-left:1em;
    border: 1px solid #D3D3D3;
    background-color:#F2F2F2; 

}

#blockLeftFleche{ 
    
    display: inline;
    padding-top:0.2em;
    padding-bottom:0.3em;
    padding-right:1em;
    padding-left:1em;
    border: 1px solid #D3D3D3; 
    background-color: #F2F2F2; 
    border-right: 0px solid #D8D8D8;
}





/******************* nav ************************/
.navbar {
        padding: 1rem 1rem!important;
}
.nav-link{
    
    font-style: italic;
}
.bg-dark {
    
    border-bottom: 1px solid gray!important;
}




/************* texte contacts ***************/
#date{
    color:rgba(30, 144, 73, 0.9);
    display:block;
}

#calendier{
    color: rgba(121, 47, 58, 0.9);
    display:block;
}

#phone{
    color: rgba(81, 24, 84, 0.7);
    display:block;
}

#rappel{
	color: #007bff;
    display:block;
}



/************* container centrale ***************/
#mainConteneur{
    
    background-color: white; 
    margin-bottom:40px;
   
}
.container-fluid{
    
    padding: 0!important;
}

.contact{
    font-size:0.9em;
    color:rgba(0, 47, 127, 0.9);
}




/************* table calendrier ***************/
.table td {
    
    border-right: 1px solid rgba(184, 191, 184, 0.3);
    border-top:  1px solid rgba(184, 191, 184, 0.3); 
    padding: 0.1em!important;  
    vertical-align: baseline!important;
}

.table{
    
    color: rgba(0, 47, 127, 0.9);
    border-spacing:0px;
    border-collapse: separate;
}

.table th {
    
    font-size: 12px;
}

.table td:last-child{
    
    border-right: 0px solid silver;
}

tr:last-child td{
    
    border-bottom: 1px solid rgba(184, 191, 184, 0.3);
}

#mois, footer {
    
    background-color: #F2F2F2;
    text-align: center;
}

#mois{ 
    
    color:black;    
    height:40px;    
    text-align: center;
    font-size: 14px;
    border:0px solid #D8D8D8!important;
}

#mois td{
    
    vertical-align: middle!important;
    border-top: 1px solid #D3D3D3;
    border-bottom: 1px solid #D3D3D3;
}

#mois td:last-child{
    
    border-right: 1px solid rgba(184, 191, 184, 0.3);
}

#afterDay td{

    border-top:  0px solid!important;
}

[class*="form-control"] {
    
    margin-top: .5rem;
}

#pills-data{
	text-align:left;    
	color: rgba(0, 47, 127, 0.9);
	font-size:17px;
}

#exposant{
	
	font-size:10px;
}

.hidden-btn{
      display: none!important;
}

/************* reglage ***************/

.ui-tooltip{
	opacity : 0.9;
	font-size:12px!important;
}





/************* icone ***************/
[class*="fa fa-angle-double-down"] {

  margin-left:10px;
}

[class*="fa fa-arrow-left"] {

  color:gray;
}

[class*="fa fa-trash"],[class*="fa fa-pencil"] {
    
    float:right;
}

[class*="fa fa-pencil"]{
	
	margin-right:20px;
}

[class*="fa fa-exclamation-triangle"] {
    
    color:rgba(0, 47, 127, 0.9);
}

[class*="fa fa-arrow-right"] {
    color:gray;
 
   
}


/************* footer ***************/


#footer{
      margin-top:70px;
    width: 100%;
    background-color: #212529;
    text-align:center;  
    color:white;
    

}
.version{
    font-size:12px;
  
    text-shadow: 2px 2px 2px black;
}

.signature{
    text-align: right;
    margin-right:10px;
    font-size:0.7em;
    text-shadow: 2px 2px 2px black;
}

#scrollUp{	
	position: fixed;
	bottom : 44px;
	right:2px;
	display: none;
	opacity:0.8;
}

#scrollDown{	
	position: fixed;
	bottom : 44px;
	right:2px;
	opacity:0.8;
}

.inputGroup {
    background-color: #fff;
    display: block;
    margin: 10px 0;
    position: relative;
    
    label {
      padding: 12px 30px;
      width: 100%;
      display: block;
      text-align: left;
      color: #3C454C;
      cursor: pointer;
      position: relative;
      z-index: 2;
      transition: color 200ms ease-in;
      overflow: hidden;

      &:before {
        width: 10px;
        height: 10px;
        border-radius: 50%;
        content: '';
        background-color: #5562eb;
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%) scale3d(1, 1, 1);
        transition: all 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
        opacity: 0;
        z-index: -1;
      }

      &:after {
        width: 32px;
        height: 32px;
        content: '';
        border: 2px solid #D1D7DC;
        background-color: #fff;
        background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
        background-repeat: no-repeat;
        background-position: 2px 3px;
        border-radius: 50%;
        z-index: 2;
        position: absolute;
        right: 30px;
        top: 50%;
        transform: translateY(-50%);
        cursor: pointer;
        transition: all 200ms ease-in;
      }
    }

    input:checked ~ label {
      color: #fff;

      &:before {
        transform: translate(-50%, -50%) scale3d(56, 56, 1);
        opacity: 1;
      }

      &:after {
        background-color: #54E0C7;
        border-color: #54E0C7;
      }
    }

    input {
      width: 32px;
      height: 32px;
      order: 1;
      z-index: 2;
      position: absolute;
      right: 30px;
      top: 50%;
      transform: translateY(-50%);
      cursor: pointer;
      visibility: hidden;
    }
  }

